objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <label>Unit Room</label>
    <nameField>
        <label>Unit Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>