objects/Room__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height (ft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>