objects/Room__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length (ft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>