objects/Room__c/fields/Room_Features__c.field-meta.xml
<CustomField>
    <fullName>Room_Features__c</fullName>
    <label>Room Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attached Bathroom</fullName>
            </value>
            <value>
                <fullName>Walk-in Closet / Wardrobe</fullName>
            </value>
            <value>
                <fullName>Dressing Area</fullName>
            </value>
            <value>
                <fullName>Balcony Access</fullName>
            </value>
            <value>
                <fullName>Bay Window</fullName>
            </value>
            <value>
                <fullName>False Ceiling with Cove Lighting</fullName>
            </value>
            <value>
                <fullName>Wooden Flooring</fullName>
            </value>
            <value>
                <fullName>Wall-Mounted TV</fullName>
            </value>
            <value>
                <fullName>Bedside Reading Lights</fullName>
            </value>
            <value>
                <fullName>Air Conditioning Unit</fullName>
            </value>
            <value>
                <fullName>Smart Lighting</fullName>
            </value>
            <value>
                <fullName>Soundproof Windows</fullName>
            </value>
            <value>
                <fullName>Study Nook / Desk</fullName>
            </value>
            <value>
                <fullName>Built-in Shelves</fullName>
            </value>
            <value>
                <fullName>Floor-to-Ceiling Windows</fullName>
            </value>
            <value>
                <fullName>Modular Cabinets</fullName>
            </value>
            <value>
                <fullName>Granite / Quartz Countertop</fullName>
            </value>
            <value>
                <fullName>Built-in Hob &amp; Chimney</fullName>
            </value>
            <value>
                <fullName>Kitchen Island / Breakfast Counter</fullName>
            </value>
            <value>
                <fullName>Pantry Storage</fullName>
            </value>
            <value>
                <fullName>Double Sink</fullName>
            </value>
            <value>
                <fullName>Water Purifier</fullName>
            </value>
            <value>
                <fullName>Pull-Out Drawers</fullName>
            </value>
            <value>
                <fullName>Microwave / Oven Slot</fullName>
            </value>
            <value>
                <fullName>Appliance Garage</fullName>
            </value>
            <value>
                <fullName>Under-cabinet Lighting</fullName>
            </value>
            <value>
                <fullName>Dishwasher Provision</fullName>
            </value>
            <value>
                <fullName>Tiled Backsplash</fullName>
            </value>
            <value>
                <fullName>Smart Kitchen Controls</fullName>
            </value>
            <value>
                <fullName>Chimney Exhaust System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>