objects/Room__c/fields/Room_Plan_Sketch_Link__c.field-meta.xml
<CustomField>
    <fullName>Room_Plan_Sketch_Link__c</fullName>
    <label>Room Plan/Sketch Link</label>
    <type>Url</type>
</CustomField>