objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bedroom</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>Guest Bedroom</fullName>
            </value>
            <value>
                <fullName>Kids Bedroom</fullName>
            </value>
            <value>
                <fullName>Servant/Helper Room</fullName>
            </value>
            <value>
                <fullName>Study Room / Home Office</fullName>
            </value>
            <value>
                <fullName>Dressing Room / Walk-in Closet</fullName>
            </value>
            <value>
                <fullName>Nursery</fullName>
            </value>
            <value>
                <fullName>Dorm Room (for rentals or student housing)</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Wet Kitchen / Dirty Kitchen (utility-style cooking)</fullName>
            </value>
            <value>
                <fullName>Dry Kitchen (modular/prep area)</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>Dining Room</fullName>
            </value>
            <value>
                <fullName>Breakfast Nook</fullName>
            </value>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Family Lounge</fullName>
            </value>
            <value>
                <fullName>Drawing Room / Formal Living</fullName>
            </value>
            <value>
                <fullName>Bathroom</fullName>
            </value>
            <value>
                <fullName>Powder Room (half-bath)</fullName>
            </value>
            <value>
                <fullName>Ensuite Bathroom</fullName>
            </value>
            <value>
                <fullName>Common Toilet</fullName>
            </value>
            <value>
                <fullName>Shower Room</fullName>
            </value>
            <value>
                <fullName>Utility Room</fullName>
            </value>
            <value>
                <fullName>Laundry Room</fullName>
            </value>
            <value>
                <fullName>Changing Room</fullName>
            </value>
            <value>
                <fullName>Media Room / Home Theater</fullName>
            </value>
            <value>
                <fullName>Game Room</fullName>
            </value>
            <value>
                <fullName>Music Room</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>