objects/Room__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit Rooms</relationshipLabel>
    <relationshipName>Unit_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>