objects/Room__c/fields/Width_ft__c.field-meta.xml
<CustomField>
    <fullName>Width_ft__c</fullName>
    <label>Width (ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>